# rust-monitor

./: CLAUDE.md  Cargo.toml  deploy.sh
clients/: pino-monitor-transport.mjs
src/: alert.rs  auth.rs  collectors.rs  config.rs  db.rs  dns_metrics.rs  journald.rs  main.rs  routes.rs  schema.rs  tailer.rs
ui/: app.js  index.html  style.css  theme.js
